# ion

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
benches/: parse.rs
src/: ion.rs  lib.rs  parser.rs  writer.rs
src/de/: mod.rs  parser.rs
src/ion/: display.rs  from_ion.rs  from_row.rs  ion_error.rs  macros.rs  mod.rs  section.rs  value.rs
tests/: de_ser.rs  parse.rs
tests/common/: mod.rs
tests/data/: contract_and_def_hotel_on_end.ion  contract_with_comments.ion
tests/de_ser/test1/: expected.json
tests/de_ser/test2/: expected.json
