[package]
name = "ion"
version = "0.8.8"
description = "parse and process ion files"
license = "MIT"
homepage = "https://github.com/ion-rs/ion"
repository = "https://github.com/ion-rs/ion"
authors = ["Marcin Szewczyk <platatita@gmail.com>", "Piotr Zolnierek <pzolnierek@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = { version = "1.0", default-features = false }
pretty_assertions = "1.2"
regex = { version = "1.6", default-features = false, features = ["std", "unicode"] }
test-case = "2.2"

[features]
serde-json = ["dep:serde", "dep:serde_json"]